--- a/app/src/main/res/layouts/dialog/layout/change_password_dialog.xml
+++ b/app/src/main/res/layouts/dialog/layout/change_password_dialog.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".page.dialog.changePasswordDialog"
-    android:layout_margin="15dp">
+    android:layout_margin="15dp"
+    tools:context=".page.dialog.changePasswordDialog">
 
     <EditText
         android:id="@+id/dialog_changePWDold"
@@ -29,21 +30,33 @@
         android:hint="@string/new_password_double_cn"
         android:inputType="textPassword" />
 
-    <Button
+    <com.deadline.statebutton.StateButton
         android:id="@+id/dialog_changePWD_Cancel_Button"
-        android:layout_width="wrap_content"
+        style="@style/StateButtonStyle"
         android:layout_height="wrap_content"
         android:layout_below="@id/dialog_changePWD_Two"
         android:layout_alignParentEnd="true"
+        android:layout_marginEnd="@dimen/rental_main_gridview_margin_9"
         android:onClick="cancel_OnClick"
-        android:text="@string/cancel_cn" />
+        android:text="@string/cancel_cn"
+        app:normalBackgroundColor="@color/blue"
+        app:pressedBackgroundColor="@color/blue"
+        app:round="true"
+        app:unableBackgroundColor="@color/blue" />
 
-    <Button
-        android:layout_width="wrap_content"
+    <com.deadline.statebutton.StateButton
+        style="@style/StateButtonStyle"
         android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
         android:layout_alignTop="@id/dialog_changePWD_Cancel_Button"
-        android:layout_marginEnd="20dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginEnd="@dimen/rental_main_gridview_margin_9"
         android:layout_toStartOf="@id/dialog_changePWD_Cancel_Button"
         android:onClick="okBtn_onClick"
-        android:text="@string/ok_cn" />
+        android:text="@string/ok_cn"
+        app:normalBackgroundColor="@color/banana"
+        app:pressedBackgroundColor="@color/banana"
+        app:round="true"
+        app:unableBackgroundColor="@color/banana" />
+
 </RelativeLayout>
