--- a/app/src/main/res/layouts/dialog/layout/login_activity.xml
+++ b/app/src/main/res/layouts/dialog/layout/login_activity.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginStart="@dimen/pwdItemHeight"
     android:layout_marginTop="@dimen/pwdHeight"
     android:layout_marginEnd="@dimen/pwdItemHeight"
@@ -18,27 +19,41 @@
         android:hint="@string/input_password_cn"
         android:inputType="textPassword" />
 
-    <Button
+    <com.deadline.statebutton.StateButton style="@style/StateButtonStyle"
         android:layout_row="1"
         android:layout_column="2"
         android:layout_columnWeight="1"
         android:layout_gravity="center_horizontal"
         android:onClick="cancel_OnClick"
-        android:text="@string/cancel_cn" />
+        android:text="@string/cancel_cn" app:normalBackgroundColor="@color/blue"
+        app:pressedBackgroundColor="@color/blue"
+        app:round="true"
+        android:layout_marginEnd="@dimen/rental_main_gridview_margin_9"
+        app:unableBackgroundColor="@color/blue" />
 
-    <Button
+    <com.deadline.statebutton.StateButton
+        style="@style/StateButtonStyle"
         android:layout_row="1"
         android:layout_column="1"
         android:layout_columnWeight="1"
         android:layout_gravity="center_horizontal"
         android:onClick="okBtn_onClick"
-        android:text="@string/ok_cn" />
+        android:layout_marginEnd="@dimen/rental_main_gridview_margin_9"
+        app:normalBackgroundColor="@color/banana"
+        app:pressedBackgroundColor="@color/banana"
+        app:round="true"
+        app:unableBackgroundColor="@color/banana"
+        android:text="@string/ok_cn"/>
 
-    <Button
+    <com.deadline.statebutton.StateButton style="@style/StateButtonStyle"
         android:layout_row="1"
         android:layout_column="0"
         android:layout_columnWeight="1"
         android:layout_gravity="center_horizontal"
         android:onClick="resetPasswordBtn_onClick"
-        android:text="@string/reset_password_cn" />
+        android:text="@string/reset_password_cn" app:normalBackgroundColor="@color/red1"
+        app:pressedBackgroundColor="@color/red1"
+        app:round="true"
+        android:layout_marginEnd="@dimen/rental_main_gridview_margin_9"
+        app:unableBackgroundColor="@color/red1"/>
 </GridLayout>
