--- a/app/src/main/res/layouts/dialog/layout/main_listview.xml
+++ b/app/src/main/res/layouts/dialog/layout/main_listview.xml
@@ -1,31 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_viewId"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grayWhite"
     tools:context=".page.PasswordManageActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        app:navigationIcon="@drawable/ic_chevron_left_black_24dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:titleTextColor="@android:color/white"
+        android:background="@color/blue"/>
 
-        <ListView
-            android:id="@+id/main_ListViewId"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:divider="#00000000"
-            android:dividerHeight="5dp"
-            android:layout_margin="@dimen/rental_main_gridview_margin_6"
-             />
+    <ListView
+        android:id="@+id/main_ListViewId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/rental_main_gridview_margin_6"
+        android:layout_below="@id/toolbar"
+        android:divider="#00000000"
+        android:dividerHeight="5dp" />
 
-        <ImageButton
-            android:id="@+id/main_add_btn"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_launcher_foreground" />
-<!--        <ExpandableListView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"/>-->
+    <ImageButton
+        android:id="@+id/main_add_btn"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="10dp"
+        android:src="@drawable/ic_launcher_foreground" />
+    <!--        <ExpandableListView-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="match_parent"/>-->
 </RelativeLayout>
