--- a/app/src/main/res/layouts/dialog/layout/rent_room_expandable_listview_borrowed_view.xml
+++ b/app/src/main/res/layouts/dialog/layout/rent_room_expandable_listview_borrowed_view.xml
@@ -2,50 +2,68 @@
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/rental_main_gridview_margin_6"
     android:background="@android:color/white"
+    android:columnCount="4"
     android:gravity="start"
-    android:layoutDirection="ltr"
-    android:columnCount="4">
+    android:layoutDirection="ltr">
 
-    <TextView android:id="@+id/rent_room_expandable_listview_borrowed_details"
+    <my_manage.tool.IconView
+        android:id="@+id/rent_room_expandable_listview_borrowed_details"
         style="@style/rental_expandable_listview_item"
-        android:text="查看详情" />
+        android:text="&#xe66f;\n查看详情" />
 
-    <TextView android:id="@+id/rent_room_expandable_listview_borrowed_continue"
+    <my_manage.tool.IconView
+        android:id="@+id/rent_room_expandable_listview_continue_rent"
         style="@style/rental_expandable_listview_item"
-        android:text="续租" />
+        android:text="&#xe666;\n续租" />
 
-    <TextView android:id="@+id/rent_room_expandable_listview_borrowed_leaseback"
+    <my_manage.tool.IconView
+        android:id="@+id/rent_room_expandable_listview_borrowed_leaseback"
         style="@style/rental_expandable_listview_item"
-        android:text="退租" />
+        android:text="&#xe61b;\n退租" />
 
-    <TextView android:id="@+id/rent_room_expandable_listview_borrowed_changed_rent"
+    <my_manage.tool.IconView
+        android:id="@+id/rent_room_expandable_listview_borrowed_changed_rent"
         style="@style/rental_expandable_listview_item"
-        android:text="调整租金" />
+        android:text="&#xe676;\n调整租金" />
 
-    <TextView android:id="@+id/rent_room_expandable_listview_borrowed_changed_deposit"
+    <my_manage.tool.IconView
+        android:id="@+id/rent_room_expandable_listview_borrowed_changed_deposit"
         style="@style/rental_expandable_listview_item"
-        android:text="调整押金" />
+        android:layout_marginTop="@dimen/rental_main_gridview_margin_6"
+        android:layout_marginBottom="@dimen/rental_main_gridview_margin_6"
+        android:text="&#xe667;\n调整押金" />
 
-    <TextView android:id="@+id/rent_room_expandable_listview_borrowed_history"
+    <my_manage.tool.IconView
+        android:id="@+id/rent_room_expandable_listview_borrowed_history"
         style="@style/rental_expandable_listview_item"
-        android:text="查看出租记录" />
+        android:layout_marginTop="@dimen/rental_main_gridview_margin_6"
+        android:layout_marginBottom="@dimen/rental_main_gridview_margin_6"
+        android:text="&#xe650;\n查看出租记录" />
 
-    <TextView android:id="@+id/rent_room_expandable_listview_borrowed_pay_propertycosts"
-        
+    <my_manage.tool.IconView
+        android:id="@+id/rent_room_expandable_listview_borrowed_pay_propertycosts"
+        style="@style/rental_expandable_listview_item"
         android:layout_columnWeight="@integer/rental_room_details_1width"
-        style="@style/rental_expandable_listview_item"
-        android:text="支付物业费" />
+        android:layout_marginTop="@dimen/rental_main_gridview_margin_6"
+        android:layout_marginBottom="@dimen/rental_main_gridview_margin_6"
+        android:text="&#xe60e;\n支付物业费" />
 
-    <TextView android:id="@+id/rent_room_expandable_listview_borrowed_renew_contract"
+    <my_manage.tool.IconView
+        android:id="@+id/rent_room_expandable_listview_borrowed_renew_contract"
         style="@style/rental_expandable_listview_item"
-        android:text="续签合同" />
+        android:layout_marginTop="@dimen/rental_main_gridview_margin_6"
+        android:layout_marginBottom="@dimen/rental_main_gridview_margin_6"
+        android:text="&#xe616;\n续签合同" />
 
-    <TextView android:id="@+id/rent_room_expandable_listview_borrowed_man_info"
-        style="@style/rental_expandable_listview_item"
-        android:text="租户资料" />
+    <my_manage.tool.IconView
+        android:id="@+id/rent_room_expandable_listview_borrowed_man_info"
+        style="@style/rental_expandable_listview_item" android:layout_marginBottom="@dimen/rental_main_gridview_margin_6"
+        android:text="&#xe611;\n租户资料" />
 
-    <TextView android:id="@+id/rent_room_expandable_listview_borrowed_del_room"
+    <my_manage.tool.IconView
+        android:id="@+id/rent_room_expandable_listview_borrowed_del_room" android:layout_marginBottom="@dimen/rental_main_gridview_margin_6"
         style="@style/rental_expandable_listview_item"
-        android:text="删除房源" />
+        android:text="&#xe63d;\n删除房源" />
 </GridLayout>
