--- a/app/src/main/res/layouts/rent/layout/rental_room_total_item.xml
+++ b/app/src/main/res/layouts/rent/layout/rental_room_total_item.xml
@@ -2,16 +2,19 @@
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/rental_main_gridview_margin_6"
     android:background="@android:color/white">
 
-    <TextView
+    <com.hanks.htextview.rainbow.RainbowTextView
         android:id="@+id/rental_main_CommunityName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:text="jjjkdj"
         android:textColor="@color/rentalMainGridViewTitleColor"
+        app:colorSpace="150dp"
+        app:colorSpeed="4dp"
         android:textSize="@dimen/rental_main_gridview_title_fontsize"
         android:textStyle="bold" />
 
