--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,9 +4,10 @@
     <dimen name="pwdItemWidth">100dp</dimen>
     <dimen name="pwdItemHeight">40dp</dimen>
     
-    <dimen name="rental_main_gridview_title_fontsize">25sp</dimen>
-    <dimen name="rental_main_gridview_nomal_fontsize">18sp</dimen>
+    <dimen name="rental_main_gridview_title_fontsize">22sp</dimen>
+    <dimen name="rental_main_gridview_nomal_fontsize">17sp</dimen>
     <dimen name="rental_main_gridview_margin_6">6dp</dimen>
+    <dimen name="rental_main_gridview_margin_9">9dp</dimen>
     <dimen name="rental_main_gridview_margin_3">3dp</dimen>
 
     <dimen name="rental_lable_textSize">17dp</dimen>
