--- a/app/src/main/res/layouts/password/layout/password_manage_item_details.xml
+++ b/app/src/main/res/layouts/password/layout/password_manage_item_details.xml
@@ -2,7 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -55,25 +56,16 @@
             android:layout_height="wrap_content"
             android:minLines="3" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <com.deadline.statebutton.StateButton
+            android:id="@+id/pwd_ManageDet_Ok_BtnId"
+            android:enabled="false"
+            style="@style/StateButtonStyle"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="@dimen/pwdItemHeight">
-
-            <Button
-                android:id="@+id/pwd_ManageDet_Ok_BtnId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/pwdItemHeight"
-                android:enabled="false"
-                android:text="@string/ok_cn" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/pwd_ManageDet_Cancel_BtnId"
-                android:text="@string/cancel_cn" />
-        </LinearLayout>
+            android:layout_width="match_parent"
+            android:text="@string/ok_cn"
+            app:normalBackgroundColor="@color/blue"
+            app:pressedBackgroundColor="@color/blue"
+            app:round="true"
+            app:unableBackgroundColor="@color/blue" />
     </LinearLayout>
 </ScrollView>
