--- a/app/src/main/res/layouts/password/layout/password_manage_list_item.xml
+++ b/app/src/main/res/layouts/password/layout/password_manage_list_item.xml
@@ -15,7 +15,7 @@
 
             style="@style/textView_1th"
             android:layout_height="@dimen/rental_main_gridview_title_fontsize"
-            android:text="@string/name_main_cn" />
+            android:text="@string/name_cn" />
 
         <TextView
             android:id="@+id/pwd_ItemId"
