--- a/app/src/main/res/menu/pwd_manage_activity_menu.xml
+++ b/app/src/main/res/menu/pwd_manage_activity_menu.xml
@@ -4,15 +4,15 @@
         android:id="@+id/add"
         android:icon="@drawable/ic_playlist_add_black_24dp"
         android:orderInCategory="5"
-        android:title="增加" />
+        android:title="@string/new_cn" />
     <item
         android:id="@+id/modify"
         android:icon="@drawable/ic_mode_edit_black_24dp"
         android:orderInCategory="5"
-        android:title="修改数据库密码" />
+        android:title="@string/change_password_cn" />
     <item
         android:id="@+id/rebuildingDB"
         android:icon="@drawable/ic_file_download_black_24dp"
         android:orderInCategory="5"
-        android:title="重建资料和密码" />
+        android:title="@string/restore_password_cn" />
 </menu>
