--- a/app/src/main/res/layouts/dialog/layout/add_person_dialog.xml
+++ b/app/src/main/res/layouts/dialog/layout/add_person_dialog.xml
@@ -69,7 +69,7 @@
             style="@style/textView_1th"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/remark_main_cn" />
+            android:text="@string/remark_cn" />
 
         <EditText
             android:id="@+id/rental_addPerson_remark"
